# AusGeo-old-1

./: .gitignore  LICENSE  README.md  analyze-abs.ipynb  gen-greater-melbourne.ipynb  gen-greater-melbourne.py  gen-greater-sydney.py  gen-mb-full.py  gen-mb-points.ipynb  gen-mb-points.py  gen-mb-segments-2.ipynb  gen-mb-segments.ipynb  gen-mesh-block-info.ipynb  gen-suburbs-geojson.ipynb  gen-suburbs-geojson.py  load-data.ipynb  pyproject.toml  requirements.txt  retransform-suburbs-geojson.py  test-load-segments.ipynb
data/: suburbs-ACT-0.geojson  suburbs-ACT-3.geojson  suburbs-NT-0.geojson  suburbs-NT-2.geojson  suburbs-Other Territories-1.geojson  suburbs-Other Territories-2.geojson  suburbs-Other Territories-3.geojson  suburbs-SA-2.geojson  suburbs-WA-3.geojson
data/blocks/: MB-6.csv  MB-8.csv
data/geojson/: suburbs-ACT-1.geojson  suburbs-ACT-2.geojson  suburbs-ACT-4.geojson  suburbs-NT-1.geojson  suburbs-NT-3.geojson  suburbs-NT-4.geojson  suburbs-Other Territories-4.geojson  suburbs-Outside Australia-3.geojson  suburbs-SA-0.geojson  suburbs-SA-1.geojson  suburbs-SA-3.geojson  suburbs-WA-0.geojson
data/mb-points/: mb-10001.csv  (+1892 more)
notebooks/: analyze-mb-alloc.ipynb  compress-mb-geojson.ipynb  gen-mesh-block-info.ipynb  gen-sua-suburbs.ipynb  ptv-analysis.ipynb  ptv-lines-1.ipynb  ptv-lines.ipynb  ptv-mb.ipynb  test-load-segments.ipynb
pyptvgtfs/: GtfsDataframe.py  __init__.py  compare_gtfs.py  postgres_wrap.py  ptv_gtfs.py
scripts/: download-mb-alloc.py  gen-greater-melbourne.py  gen-mesh-block-info.py  gen-ptv-shapes.geojson.py  ptv-lines-1.py  ptv-lines.py
(+2614 files in other folders)
