[tool.poetry]
name = "pyptvgtfs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
SQLAlchemy = "^2.0.27"
psycopg2 = "^2.9.9"
scipy = "^1.12.0"
requests = "^2.31.0"
tqdm = "^4.66.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
